Fix tall game dialog container alignment issue on smaller devices

--- a/src/_assets/css/pages/_games-library.css
+++ b/src/_assets/css/pages/_games-library.css
@@ -496,6 +496,10 @@
 	}
 }
 
+.gaming-details-dialog {
+	margin: auto; /* Because the dialog is added in a .flow context, it has margin we don't need. */
+}
+
 .gaming-details-dialog-inner {
 	container: gamingDetailsDialog / inline-size;
 
